--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
 
             <div class="info-section top-info">
-                 <p><strong>RAJKUMAR GIRI</strong> <span id="output-rajkumar-name"></span></p>
+                 <p><strong>NAME:</strong> <span id="output-rajkumar-name"></span></p>
                  <p><strong>EMAIL NO :</strong> <span id="output-top-email"></span></p>
                  <p><strong>Phone no -</strong> <span id="output-top-phone"></span></p>
             </div>
