--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
             </div>
 
             <div class="info-section top-info">
-                 <p><strong>RAJKUMAR GIRI</strong> <span id="output-rajkumar-name"></span></p>
-                 <p><strong>EMAIL NO :</strong> <span id="output-top-email"></span></p>
+                 <p><strong>Name:</strong> <span id="output-rajkumar-name"></span></p>
+                 <p><strong>Email ID :</strong> <span id="output-top-email"></span></p>
                  <p><strong>Phone no -</strong> <span id="output-top-phone"></span></p>
             </div>
 
