--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
             </div>
             <button type="button" id="add-education" class="btn-secondary">Add More Qualification</button>
 
+            <!-- Extra Qualification Section -->
+            <h2>Extra Qualification / Skills</h2>
+            <textarea id="extra-qualification" placeholder="e.g., Computer Skills, Typing Speed, Special Training etc."></textarea>
+
             <!-- Other Information -->
             <h2>Other Information</h2>
             <div class="input-group">
@@ -139,6 +143,12 @@
                         <!-- Education rows will be inserted here by JavaScript -->
                     </tbody>
                 </table>
+            </div>
+
+            <!-- Extra Qualification Output -->
+            <div class="info-section extra-qualification-info" id="extra-qual-output-section">
+                <h3><u>EXTRA QUALIFICATION:</u></h3>
+                <p id="output-extra-qualification" style="white-space: pre-wrap;"></p>
             </div>
 
             <div class="declaration">
