--- a/index.html
+++ b/index.html
@@ -66,18 +66,20 @@
 
     <!-- This is the hidden div that will be converted to PDF -->
     <div id="bio-data-output" class="hidden">
-        <div class="header">
-            <h1>BIO - DATA</h1>
-        </div>
-        <div class="content">
-            <div class="photo-box">
-                <img id="output-photo" src="" alt="User Photo">
-            </div>
-
-            <div class="info-section top-info">
-                 <p><strong>Name:</strong> <span id="output-rajkumar-name"></span></p>
-                 <p><strong>Email ID :</strong> <span id="output-top-email"></span></p>
-                 <p><strong>Phone no -</strong> <span id="output-top-phone"></span></p>
+        <!-- Main content wrapper -->
+        <div class="main-content">
+            <div class="top-section">
+                <div class="header-text">
+                    <h1>BIO - DATA</h1>
+                    <div class="top-details">
+                        <p><strong>Name:</strong> <span id="output-rajkumar-name"></span></p>
+                        <p><strong>Email ID:</strong> <span id="output-top-email"></span></p>
+                        <p><strong>Phone no -</strong> <span id="output-top-phone"></span></p>
+                    </div>
+                </div>
+                <div class="photo-box">
+                    <img id="output-photo" src="" alt="User Photo">
+                </div>
             </div>
 
             <div class="info-section personal-info">
@@ -140,12 +142,11 @@
                         </tr>
                     </thead>
                     <tbody id="output-education-body">
-                        <!-- Education rows will be inserted here by JavaScript -->
+                        <!-- Populated by JS -->
                     </tbody>
                 </table>
             </div>
 
-            <!-- Extra Qualification Output -->
             <div class="info-section extra-qualification-info" id="extra-qual-output-section">
                 <h3><u>EXTRA QUALIFICATION:</u></h3>
                 <p id="output-extra-qualification" style="white-space: pre-wrap;"></p>
@@ -154,16 +155,17 @@
             <div class="declaration">
                 <p><strong>DECLARATION –</strong> I HEREBY DECLARE THAT THE ABOVE MENTIONED INFORMATION IS CORRECT UP TO MY KNOWLEDGE.</p>
             </div>
-
-            <div class="footer">
-                <div class="date-place">
-                    <p><strong>DATE :</strong> <span id="output-date"></span></p>
-                    <p><strong>PLACE :</strong> <span id="output-place"></span></p>
-                </div>
-                <div class="signature">
-                    <img id="output-signature-img" src="" alt="User Signature">
-                    <p><strong>SIGNATURE</strong></p>
-                </div>
+        </div>
+        
+        <!-- Footer is outside main-content to stick to the bottom -->
+        <div class="footer">
+            <div class="date-place">
+                <p><strong>DATE :</strong> <span id="output-date"></span></p>
+                <p><strong>PLACE :</strong> <span id="output-place"></span></p>
+            </div>
+            <div class="signature">
+                <img id="output-signature-img" src="" alt="User Signature">
+                <p><strong>SIGNATURE</strong></p>
             </div>
         </div>
     </div>
