--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
     </div>
 
     <!-- This is the hidden div that will be converted to PDF -->
+    <!-- Its structure is updated for a better layout -->
     <div id="bio-data-output" class="hidden">
-        <!-- Main content wrapper -->
         <div class="main-content">
             <div class="top-section">
                 <div class="header-text">
@@ -157,7 +157,6 @@
             </div>
         </div>
         
-        <!-- Footer is outside main-content to stick to the bottom -->
         <div class="footer">
             <div class="date-place">
                 <p><strong>DATE :</strong> <span id="output-date"></span></p>
