--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     <!-- This is the hidden div that will be converted to PDF -->
     <!-- Its structure is updated for a better layout -->
     <div id="bio-data-output" class="hidden">
+        <!-- Main content wrapper -->
         <div class="main-content">
             <div class="top-section">
                 <div class="header-text">
@@ -157,6 +158,7 @@
             </div>
         </div>
         
+        <!-- Footer is now separate -->
         <div class="footer">
             <div class="date-place">
                 <p><strong>DATE :</strong> <span id="output-date"></span></p>
